samples/_failures_safe/1761541505_8b9124_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_466001ae.c: In function ‘print_errors’:
./samples/SAFE/__tmp_466001ae.c:144:5: error: expected identifier or ‘(’ at end of input
  144 |     for (uint32_t
      |     ^~~
./samples/SAFE/__tmp_466001ae.c:144:5: error: expected declaration or statement at end of input
